--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.11.0",
+    "amqplib": "^0.10.3",
     "axios": "^1.1.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "typescript-json-schema": "^0.54.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/chai": "^4.3.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
